# PDCurses

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel
common/: BUILD.bazel
demos/: BUILD.bazel
pdcurses/: BUILD.bazel
wincon/: BUILD.bazel
x11/: BUILD.bazel
