load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "hdrs",
    hdrs = glob(["*.h"]),
    visibility = ["//:__subpackages__"],
)

cc_library(
    name = "PDCurses",
    visibility = ["//visibility:public"],
    deps = [
        ":hdrs",
        "//pdcurses",
    ] + select({
        "@platforms//os:windows": ["//wincon"],
        "@platforms//os:linux": ["//x11"],
    }),
)
