load("@bazel_skylib//rules:copy_file.bzl", "copy_file")
load("@rules_cc//cc:defs.bzl", "cc_library")

copy_file(
    name = "curses_h",
    src = "curses.h",
    out = "pdcurses_bazel_hdrs/curses.h",
)

copy_file(
    name = "curspriv_h",
    src = "curspriv.h",
    out = "pdcurses_bazel_hdrs/curspriv.h",
)

copy_file(
    name = "panel_h",
    src = "panel.h",
    out = "pdcurses_bazel_hdrs/panel.h",
)

cc_library(
    name = "pdcurses",
    srcs = glob([
        "pdcurses/*.c",
        "pdcurses/*.h",
        "common/*.c",
    ]) + select({
        "@platforms//os:windows": glob([
            "wincon/*.c",
            "wincon/*.h",
        ]),
        "@platforms//os:linux": glob([
            "x11/*.c",
            "x11/*.h",
        ]),
    }),
    hdrs = glob([
        "*.h",
        "common/*.h",
        "common/*.xpm",
    ]) + [
        "pdcurses_bazel_hdrs/curses.h",
        "pdcurses_bazel_hdrs/curspriv.h",
        "pdcurses_bazel_hdrs/panel.h",
    ],
    copts = select({
        "@platforms//os:linux": ["-isystem /usr/include/X11"],
        "//conditions:default": [],
    }),
    defines = ["NCURSES_CONST"],
    includes = ["pdcurses_bazel_hdrs"],
    linkopts = select({
        "@platforms//os:windows": [
            "-DEFAULTLIB:user32",
            "-DEFAULTLIB:advapi32",
        ],
        "@platforms//os:linux": [
            "-lX11",
            "-lXt",
            "-lXpm",
            "-lXmu",
            "-lXaw",
        ],
    }),
    visibility = ["//visibility:public"],
)
